--- a/.eslintrc
+++ b/.eslintrc
@@ -55,7 +55,8 @@
       "ObjectExpression": 1,
       "ignoredNodes": ["ConditionalExpression"]
     }],
-    "linebreak-style":              ["error", "unix"],
+    "linebreak-style":              ["error", "unix", "windows"],
+    "block-spacing":                ["error", "always"],
     "no-dupe-keys":                 ["error"],
     "no-duplicate-case":            ["error"],
     "no-extra-semi":                ["warn"],
